--- a/src/Kafka.AspNetCore.DependencyInjection/Kafka.AspNetCore.DependencyInjection.csproj
+++ b/src/Kafka.AspNetCore.DependencyInjection/Kafka.AspNetCore.DependencyInjection.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="1.4.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.5" />
   </ItemGroup>
 
 </Project>
